--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
   </div>
 
   <!-- hw3 -->
-  <h1>Список завдань</h1>
+
+  <h1 style="text-align: center;">Список завдань</h1>
 
   <ul id="taskList" class="task-list">
-    <li class="task-item">Приклад завдання <button class="deleteButton">Видалити</button></li>
+    <li class="task-item">Приклад завдання <button class="deleteButton">Видалити</button>
+    </li>
   </ul>
 
   <input type="text" id="newTaskInput" placeholder="Введіть нове завдання">
