--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </li>
   </ul>
 
-  <input type="text" id="newTaskInput" placeholder="Введіть нове завдання">
-  <button id="addTaskButton">Додати завдання</button>
+  <input type="text" id="newTask" placeholder="Введіть нове завдання">
+  <button id="taskButton">Додати завдання</button>
 
   <script src="hw1.js"></script>
   <script src="hw2.js"></script>
